card remove useless span

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
             <mat-card>
                <h2>Card</h2>
                <div class="custom-element-container">
-                  <mat-card>
-                     <span>Card with span</span>
-                  </mat-card>
+                  <mat-card>Card with text</mat-card>
                   <mat-card>
                      <p>Card with p</p>
                   </mat-card>
