--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
                </div>
             </mat-card>
          </section>
+         <section>
+            <mat-card>
+               <h2>Expandable card</h2>
+               <div class="custom-element-container">
+                  <mat-exp-card>Expandable card with text</mat-exp-card>
+                  <mat-exp-card width="200px" height="14px"
+                     >Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                     Laboriosam dolorum rem eveniet sint veniam temporibus esse
+                     consequuntur cum. Nostrum, nisi.</mat-exp-card
+                  >
+               </div>
+            </mat-card>
+         </section>
       </main>
    </body>
 </html>
