expandable card upgrade: transition + height

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                   <mat-card>
                      <button>Card with button</button>
                   </mat-card>
-                  <mat-card width="200px" height="200px">
+                  <mat-card width="200px" height="220px">
                      <h1>h1</h1>
                      <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -37,13 +37,12 @@
          </section>
          <section>
             <mat-card>
-               <h2>Expandable card</h2>
+               <h2>Expandable Card</h2>
                <div class="custom-element-container">
                   <mat-exp-card>Expandable card with text</mat-exp-card>
-                  <mat-exp-card width="200px" height="14px"
+                  <mat-exp-card width="200px" height="30px"
                      >Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                     Laboriosam dolorum rem eveniet sint veniam temporibus esse
-                     consequuntur cum. Nostrum, nisi.</mat-exp-card
+                     Laboriosam dolorum rem eveniet sint.</mat-exp-card
                   >
                </div>
             </mat-card>
