mat-exp-card > mat-card-exp + default card overflow hidden

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
          </section>
          <section>
             <mat-card>
-               <h2>Expandable Card (<code>mat-exp-card</code>)</h2>
+               <h2>Expandable Card (<code>mat-card-exp</code>)</h2>
                <p>
                   Extends card. When clicked, the card expands to show the full
                   content. The height must be manually set or the card will
@@ -55,16 +55,16 @@
                   <li><strong>height</strong>: Force the card's height.</li>
                </ul>
                <div class="custom-element-container">
-                  <mat-exp-card>Expandable card with text</mat-exp-card>
-                  <mat-exp-card width="200px" height="30px"
+                  <mat-card-exp>Expandable card with text</mat-card-exp>
+                  <mat-card-exp width="200px" height="30px"
                      >Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                     Laboriosam dolorum rem eveniet sint.</mat-exp-card
+                     Laboriosam dolorum rem eveniet sint.</mat-card-exp
                   >
                </div>
             </mat-card>
          </section>
          <section>
-            <mat-card>
+            <mat-card height="100px">
                <h2>Image Container (<code>mat-img</code>)</h2>
                <p>
                   An image container that takes up the same space even if the
