bugfix + change shadow

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </mat-card>
          </section>
          <section>
-            <mat-card height="100px">
+            <mat-card>
                <h2>Image Container (<code>mat-img</code>)</h2>
                <p>
                   An image container that takes up the same space even if the
