default ratio if width and height, + styling

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                   <li><strong>height</strong>: Force the card's height.</li>
                </ul>
                <div class="custom-element-container">
-                  <mat-card-exp>Expandable card with text</mat-card-exp>
-                  <mat-card-exp width="200px" height="30px"
+                  <mat-card-exp>Expandable card</mat-card-exp>
+                  <mat-card-exp height="30px"
                      >Lorem ipsum dolor sit amet consectetur adipisicing elit.
                      Laboriosam dolorum rem eveniet sint.</mat-card-exp
                   >
@@ -77,7 +77,7 @@
                <h3>Attributes</h3>
                <ul>
                   <li><strong>src</strong>: The image src.</li>
-                  <li><strong>width</strong>: Force the card's width.</li>
+                  <li><strong>width</strong>: Force the element's width.</li>
                   <li>
                      <strong>ratio</strong>: The image ratio. Defaults to 16:9.
                   </li>
@@ -89,7 +89,7 @@
                      <mat-img
                         img="https://placehold.co/150"
                         width="150px"
-                        ratio="1:1"
+                        height="150px"
                      ></mat-img>
                   </div>
                   <div class="image-container image-container--unavailable">
@@ -115,7 +115,6 @@
                         img="https://placehold.co/broken"
                         alt="fake unavailable picture"
                         width="200px"
-                        ratio="16:9"
                      ></mat-img>
                   </div>
                </div>
