--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                <li><strong>height</strong>: Force the card's height.</li>
             </ul>
             <mat-card>Card with text</mat-card>
-            <mat-card>
-               <p>Card with p</p>
+            <mat-card hoverable>
+               <p>Hoverable card with p</p>
             </mat-card>
             <mat-card>
                <button>Card with button</button>
@@ -46,7 +46,7 @@
                <li><strong>height</strong>: Force the card's height.</li>
             </ul>
             <mat-card-exp>Expandable card</mat-card-exp>
-            <mat-card-exp height="30px"
+            <mat-card-exp hoverable height="30px"
                >Lorem ipsum dolor sit amet consectetur adipisicing elit.
                Laboriosam dolorum rem eveniet sint.</mat-card-exp
             >
