--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
          <h1>Custom Material Elements</h1>
       </header>
       <main>
+         <div class="preamble">
+            <p>This is a set of custom elements material designed inspired.</p>
+            <p>
+               Transitions speed can be overwitten with the css variable
+               <code>--transition-speed</code>.
+            </p>
+         </div>
          <section-card name="Card" code="mat-card">
             <p slot="desc">A simple card with a slot inside to add any html.</p>
             <ul slot="attributes">
