code snippet WIP

--- a/index.html
+++ b/index.html
@@ -112,6 +112,17 @@
                ></mat-img>
             </div>
          </section-card>
+         <section-card name="Code" code="mat-code">
+            <div slot="desc">
+               <p>A container to write code snippets into.</p>
+            </div>
+            <mat-code>
+console.log('Hello');
+const useless = 37;
+
+export default userless;
+            </mat-code>
+         </section-card>
       </main>
    </body>
 </html>
